--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <title>D V O I N O I</title>
    <meta name="description" content="Live Techno & Noise">
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
-   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
