--- a/index.html
+++ b/index.html
@@ -6,49 +6,40 @@
    <meta name="description" content="Live Techno & Noise">
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
    <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-   <link rel="stylesheet" type="text/css" href="main.css">
+   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
    <div id="wrapper">
       <header>
          <h1>Dvoinoi</h1>
-         <h2>SYMPHONIC PUNK COUNTRY DISCO</h2>
+         <img src="img/bug.png"/>
          <p>
             <a href="https://soundcloud.com/dvoinoi/">soundcloud</a> |
-            <a href="https://dvoinoi.bandcamp.com/">bandcamp</a> |
-            <a href="/live">live</a> |
-            <a href="/contact">contact</a>
+            <a href="https://dvoinoi.bandcamp.com/">bandcamp</a>
+            <p>booking + rants :: dvoinoi.official@gmail.com</p>
          </p>
       </header>
       <main>
          <div class="content">
             <section class="home-page">
                <div class="article">
+                  <p><time>19700101</time></p>
                   <p>
-                     Dvoinoi is a electronic duo, based in Bilbao, Basque Country. We make live techno, noise, and experimental music.
+                     Dvoinoi is a electronic duo, based in Bilbao, Basque Country. We make live electronic music.
+                  </p>
+                  <p>
+                     We love experimenting with analog and digital equipment. We also write our own signal processing software.
                   </p>
                </div>
-
                <div class="article">
-                  <iframe width="100%" height="300" src="https://www.youtube.com/embed/VkO0nppRDSQ" frameborder="0" allowfullscreen></iframe>
+                  <p><time>20160901</time></p>
+                  <p>
+                     We have released a new tape, download it at <a href="https://archive.org/details/@dvoinoi">archive.org</a>
+                  </p>
                </div>
-
-               <div class="article">
-                  <iframe width="100%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/209197135&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-               </div>
-
-               <div class="article">
-                  <iframe width="100%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/148712805&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-               </div>
-
-               <div class="article">
-                  <iframe width="100%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/124516708&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-               </div>
-
             </section>
          </div>
       </main>
    </div>
-
 </body>
 </html>
