--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
          <img src="img/bug.png"/>
          <p>
             <a href="https://soundcloud.com/dvoinoi/">soundcloud</a> |
-            <a href="https://dvoinoi.bandcamp.com/">bandcamp</a>
+            <a href="https://dvoinoi.bandcamp.com/">bandcamp</a> |
+            <a href="https://twitter.com/dvoinoi_">tw</a>
             <p>booking + rants :: dvoinoi.official@gmail.com</p>
          </p>
       </header>
