--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
          <p>
             <a href="https://soundcloud.com/dvoinoi/">soundcloud</a> |
             <a href="https://dvoinoi.bandcamp.com/">bandcamp</a> |
+            <a href="https://archive.org/details/@dvoinoi">archive</a> |
             <a href="https://twitter.com/dvoinoi_">tw</a>
             <p>booking + rants :: dvoinoi.official@gmail.com</p>
          </p>
