--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                      We have released a new tape, download it at <a href="https://archive.org/details/@dvoinoi">archive.org</a>
                   </p>
                </div>
+               <div class="article">
+                  <p><time>20140707</time></p>
+                  <p>
+                     We released a track with <a href="http://www.plazmarec.com/">Plazma Records</a> - <a href="https://www.beatport.com/release/tankard/1327653">tankard</a>
+                  </p>
+               </div>
             </section>
          </div>
       </main>
