--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
                   </p>
                </div>
                <div class="article">
+                  <p><time>20141231</time></p>
+                  <p>
+                     We released an album <a href="https://soundcloud.com/dvoinoi/sets/binary-solstice">Binary Solstice</a>
+                  </p>
+               </div>
+               <div class="article">
                   <p><time>20140707</time></p>
                   <p>
                      We released a track with <a href="http://www.plazmarec.com/">Plazma Records</a> - <a href="https://www.beatport.com/release/tankard/1327653">tankard</a>
