--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-   <div id="wrapper">
+   <div id="wrapper" itemscope itemtype="http://schema.org/MusicGroup">
       <header>
-         <h1>Dvoinoi</h1>
+         <h1 itemprop="name">Dvoinoi</h1>
          <img src="img/bug.png"/>
          <p>
             <a href="https://soundcloud.com/dvoinoi/">soundcloud</a> |
@@ -42,13 +42,26 @@
                <div class="article">
                   <p><time>20141231</time></p>
                   <p>
-                     We released an album <a href="https://soundcloud.com/dvoinoi/sets/binary-solstice">Binary Solstice</a>
+                     We released an album<br>
+                     <a href="https://soundcloud.com/dvoinoi/sets/binary-solstice">Binary Solstice</a><br>
+                     <a href="https://dvoinoi.bandcamp.com/album/binary-solstice">download it at bandcamp</a>
+                  </p>
+               </div>
+               <div class="article">
+                  <p><time>20151212</time></p>
+                  <p>
+                     listen to an excerpt from "neurope" : <a href="https://soundcloud.com/dvoinoi/neorope-n">n</a>
                   </p>
                </div>
                <div class="article">
                   <p><time>20140707</time></p>
                   <p>
-                     We released a track with <a href="http://www.plazmarec.com/">Plazma Records</a> - <a href="https://www.beatport.com/release/tankard/1327653">tankard</a>
+                     <div itemprop="track" itemscope itemtype="http://schema.org/MusicRecording">
+                        We released a track with <a href="http://www.plazmarec.com/">Plazma Records</a> -
+                        <a href="https://www.beatport.com/release/tankard/1327653" itemprop="url">
+                           <span itemprop="name">tankard</span>
+                        </a>
+                     </div>
                   </p>
                </div>
             </section>
