--- a/index.html
+++ b/index.html
@@ -55,13 +55,11 @@
                </div>
                <div class="article">
                   <p><time>20140707</time></p>
-                  <p>
-                     <div itemprop="track" itemscope itemtype="http://schema.org/MusicRecording">
-                        We released a track with <a href="http://www.plazmarec.com/">Plazma Records</a> -
-                        <a href="https://www.beatport.com/release/tankard/1327653" itemprop="url">
-                           <span itemprop="name">tankard</span>
-                        </a>
-                     </div>
+                  <p itemprop="track" itemscope itemtype="http://schema.org/MusicRecording">
+                     We released a track with <a href="http://www.plazmarec.com/">Plazma Records</a> -
+                     <a href="https://www.beatport.com/release/tankard/1327653" itemprop="url">
+                        <span itemprop="name">tankard</span>
+                     </a>
                   </p>
                </div>
             </section>
