--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                <div class="article">
                   <p><time>1485037194</time></p>
                   <p>
-                     We're on <a href="https://idmradio.net">idmradio.net</a>
+                     We're on <a href="http://idmradio.net">idmradio.net</a>
                   </p>
                </div>
                <div class="article">
