--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
                   </p>
                </div>
                <div class="article">
+                  <p><time>1493793871</time></p>
+                  <p>
+                     Check out our monophonic midi text-sequncer! <a href="https://github.com/dvoinoi/text-sequencer">github.com/dvoinoi</a>.
+                  </p>
+               </div>
+               <div class="article">
                   <p><time>1485037194</time></p>
                   <p>
                      We're on <a href="http://idmradio.net">idmradio.net</a>
