--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
                   </p>
                </div>
                <div class="article">
+                  <p><time>1494569149</time></p>
+                  <p>
+                     Watch the Neuropa Live, excerpt video on <a href="https://www.youtube.com/watch?v=AagDIg3_mnY">youtube</a>
+                  </p>
+               </div>
+               <div class="article">
                   <p><time>1493793871</time></p>
                   <p>
                      Check out our monophonic midi text-sequncer! <a href="https://github.com/dvoinoi/text-sequencer">github.com/dvoinoi</a>.
