--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                      We released an album<br>
                      <a href="https://soundcloud.com/dvoinoi/sets/binary-solstice">Binary Solstice</a><br>
                      <a href="https://dvoinoi.bandcamp.com/album/binary-solstice">download it at bandcamp</a>
+                     <a href="https://www.youtube.com/watch?v=ZhyPzyk6DFM">listen on youtube</a>
                   </p>
                </div>
                <div class="article">
