--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
                   </p>
                </div>
                <div class="article">
+                  <p><time>1497564000</time></p>
+                  <p>
+                     New album: Artefact, download it at <a href="https://dvoinoi.bandcamp.com/album/artefact">bandcamp</a>
+                  </p>
+               </div>
+               <div class="article">
                   <p><time>1494569149</time></p>
                   <p>
                      Watch the Neuropa Live, excerpt video on <a href="https://www.youtube.com/watch?v=AagDIg3_mnY">youtube</a>
