--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-
 <!DOCTYPE html>
 <html>
 <head>
    <title>D V O I N O I</title>
-   <meta name="description" content="Live Techno & Noise">
+   <meta name="description" content="Dvoinoi is an electronic duo performing live Techno & Noise">
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
    <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <link rel="stylesheet" type="text/css" href="css/main.css">
+   <meta name="theme-color" content="#14bbda" />
 </head>
 <body>
    <div id="wrapper" itemscope itemtype="http://schema.org/MusicGroup">
@@ -25,7 +25,6 @@
          <div class="content">
             <section class="home-page">
                <div class="article">
-                  <p><time>19700101</time></p>
                   <p>
                      Dvoinoi is a electronic duo, based in Bilbao, Basque Country. We make live electronic music.
                   </p>
@@ -58,13 +57,13 @@
                   </p>
                </div>
                <div class="article">
-                  <p><time>20160901</time></p>
+                  <p><time>1472680800</time></p>
                   <p>
                      We have released a new tape, download it at <a href="https://archive.org/details/@dvoinoi">archive.org</a>
                   </p>
                </div>
                <div class="article">
-                  <p><time>20141231</time></p>
+                  <p><time>1419980400</time></p>
                   <p>
                      We released an album<br>
                      <a href="https://soundcloud.com/dvoinoi/sets/binary-solstice">Binary Solstice</a><br>
@@ -73,13 +72,13 @@
                   </p>
                </div>
                <div class="article">
-                  <p><time>20151212</time></p>
+                  <p><time>1404684000</time></p>
                   <p>
                      listen to an excerpt from "neurope" : <a href="https://soundcloud.com/dvoinoi/neorope-n">n</a>
                   </p>
                </div>
                <div class="article">
-                  <p><time>20140707</time></p>
+                  <p><time>1404684000</time></p>
                   <p itemprop="track" itemscope itemtype="http://schema.org/MusicRecording">
                      We released a track with <a href="http://www.plazmarec.com/">Plazma Records</a> -
                      <a href="https://www.beatport.com/release/tankard/1327653" itemprop="url">
