--- a/press/es/index.html
+++ b/press/es/index.html
@@ -17,7 +17,6 @@
          </a>
          <p>
             <a href="https://soundcloud.com/dvoinoi/">soundcloud</a> |
-            <a href="https://soundcloud.com/dvoinoi/">soundcloud</a> |
             <a href="https://dvoinoi.bandcamp.com/">bandcamp</a> |
             <a href="https://archive.org/details/@dvoinoi">archive</a> |
             <a href="https://twitter.com/dvoinoi_">tw</a>
@@ -28,7 +27,6 @@
          <div class="content">
             <section class="home-page">
                <div class="article">
-                  <h2>Spanish BIO</h2>
                   <p>
                      Dvoinoi es Aleksander Bogdanov, Moscú 1984 y Gorka Arce, Bilbao 1976.
                   </p>
@@ -53,6 +51,30 @@
                       Gorka Arce debe parte de su Infección sonora y herencia kraut a seis años de vivencias en Berlin y 2 en Madrid, donde experimentó con diversas facetas de músico, programador cultural y dj.
                   </p>
                </div>
+            </section>
+            <section>
+                <div class="live pics">
+                    <div>
+                        <a href="../../img/live/dvoinoi-live-1.jpg" target="_blank">
+                            <img alt="Dvoinoi Playing Live, Alexander Bogdanov & Gorka Arce" src="../../img/live/dvoinoi-live-1.jpg">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="../../img/live/dvoinoi-live-2.jpg" target="_blank">
+                            <img alt="Dvoinoi Playing Live, Alexander Bogdanov & Gorka Arce" src="../../img/live/dvoinoi-live-2.jpg">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="../../img/live/dvoinoi-live-3.jpg" target="_blank">
+                            <img alt="Dvoinoi Playing Live, Alexander Bogdanov & Gorka Arce" src="../../img/live/dvoinoi-live-3.jpg">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="../../img/live/dvoinoi-live-4.jpg" target="_blank">
+                            <img alt="Dvoinoi Playing Live, Alexander Bogdanov & Gorka Arce" src="../../img/live/dvoinoi-live-4.jpg">
+                        </a>
+                    </div>
+                </div>
             </section>
 
             <p>&nbsp;</p>
