--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
    <meta name="description" content="Dvoinoi is an electronic duo performing live Techno & Noise">
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
    <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-   <link rel="stylesheet" type="text/css" href="/css/main.css">
+   <link rel="stylesheet" type="text/css" href="css/main.css">
    <meta name="theme-color" content="#14bbda" />
 </head>
 <body>
    <div id="wrapper" itemscope itemtype="http://schema.org/MusicGroup">
       <header>
          <h1 itemprop="name">Dvoinoi</h1>
-         <img src="/img/bug.png"/>
+         <img src="img/bug.png"/>
          <p>
             <a href="https://soundcloud.com/dvoinoi/">soundcloud</a> |
             <a href="https://dvoinoi.bandcamp.com/">bandcamp</a> |
             <a href="https://archive.org/details/@dvoinoi">archive</a> |
-            <a href="https://twitter.com/dvoinoi_">tw</a>
+            <a href="https://twitter.com/dvoinoi_">tw</a> |
+            <a href="press/es/index.html">press</a>
             <p>booking + rants :: dvoinoi.official@gmail.com</p>
          </p>
       </header>
