--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
    <div id="wrapper" itemscope itemtype="http://schema.org/MusicGroup">
       <header>
          <h1 itemprop="name">Dvoinoi</h1>
-         <img src="img/bug.png"/>
+         <a href="/">
+             <img alt="Dvoinoi Band Logo" title="Dvoinoi" src="img/bug.png"/>
+         </a>
          <p>
             <a href="https://soundcloud.com/dvoinoi/">soundcloud</a> |
             <a href="https://dvoinoi.bandcamp.com/">bandcamp</a> |
             <a href="https://archive.org/details/@dvoinoi">archive</a> |
             <a href="https://twitter.com/dvoinoi_">tw</a> |
-            <a href="press/es/index.html">press</a>
+            <a href="http://dvoinoi.com/press/es/index.html">wat</a>
             <p>booking + rants :: dvoinoi.official@gmail.com</p>
          </p>
       </header>
@@ -27,10 +29,10 @@
             <section class="home-page">
                <div class="article">
                   <p>
-                     Dvoinoi is a electronic duo, based in Bilbao, Basque Country. We make live electronic music.
+                     Dvoinoi is an electronic duo, out in Bilbao, Basque Country.
                   </p>
                   <p>
-                     We love experimenting with analog and digital equipment. We also write our own signal processing software.
+                     We do weird experiments with analog and digital subjects. We also write signal processing applications.
                   </p>
                </div>
                <div class="article">
