--- a/press/es/index.html
+++ b/press/es/index.html
@@ -20,6 +20,7 @@
             <a href="https://dvoinoi.bandcamp.com/">bandcamp</a> |
             <a href="https://archive.org/details/@dvoinoi">archive</a> |
             <a href="https://twitter.com/dvoinoi_">tw</a>
+            <a href="http://dvoinoi.com/press/es/index.html">wat</a>
             <p>booking + rants :: dvoinoi.official@gmail.com</p>
          </p>
       </header>
