--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                <div class="article">
                   <p><time>1520640000</time></p>
                   <p>
-                     (March 10 2018) Live set <a href="http://www.contubernio.es/uncategorized/fua-chaval-fest/">@fuachaval festival</a>.
+                     March 17 2018, Live @<a href="https://es-la.facebook.com/Fua-chaval-fest-626523037496410/">fuachaval festival</a>.
                   </p>
                </div>
                <div class="article">
                   <p><time>1507593600</time></p>
                   <p>
-                     Live in the studio <a href="https://www.mixcloud.com/orbitak/dvoinoi-live/">@orbitak radio</a>
+                     Live set <a href="https://www.mixcloud.com/orbitak/dvoinoi-live/">@orbitak radio</a>. Thank you Orbitak!
                   </p>
                </div>
                <div class="article">
@@ -111,5 +111,16 @@
          </div>
       </main>
    </div>
+   <script>
+       /*
+       $(document).ready(function(){
+           $('time').each(function(k,v){
+               ti = $(this).text();
+               human = new Date(ti*1000);
+               $(this).text(ti + ' - ' + human);
+           });
+       });
+       */
+   </script>
 </body>
 </html>
