--- a/press/es/index.html
+++ b/press/es/index.html
@@ -75,6 +75,11 @@
                             <img alt="Dvoinoi Playing Live, Alexander Bogdanov & Gorka Arce" src="../../img/live/dvoinoi-live-4.jpg">
                         </a>
                     </div>
+                    <div>
+                        <a href="../../img/live/dvoinoi-live-5.jpg" target="_blank">
+                            <img alt="Dvoinoi Playing Live, Alexander Bogdanov & Gorka Arce" src="../../img/live/dvoinoi-live-5.jpg">
+                        </a>
+                    </div>
                 </div>
             </section>
 
