--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <section class="home-page">
                <div class="article">
                   <p>
-                     Dvoinoi is an electronic duo, out in Bilbao, Basque Country.
+                     Dvoinoi is an electronic duo, formed in 2014 in Bilbao, Basque Country.
                   </p>
                   <p>
-                     We do weird experiments with analog and digital subjects. We also write signal processing applications.
+                     We focus on noise, techno and experiments with sound.
                   </p>
                </div>
                <div class="article">
