--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>D V O I N O I</title>
+   <title>dvoinoi</title>
    <meta name="description" content="Dvoinoi is an electronic duo performing live Techno & Noise">
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
    <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -10,124 +10,29 @@
 </head>
 <body>
    <div id="wrapper" itemscope itemtype="http://schema.org/MusicGroup">
+
       <header>
-         <h1 itemprop="name">Dvoinoi</h1>
-         <a href="/">
-             <img alt="Dvoinoi Band Logo" title="Dvoinoi" src="img/bug.png"/>
-         </a>
-         <p>
-            <a href="https://soundcloud.com/dvoinoi/">soundcloud</a> |
-            <a href="https://dvoinoi.bandcamp.com/">bandcamp</a> |
-            <a href="https://archive.org/details/@dvoinoi">archive</a> |
-            <a href="https://twitter.com/dvoinoi_">tw</a> |
-            <a href="http://dvoinoi.com/press/es/index.html">wat</a>
-            <p>booking + rants :: dvoinoi.official@gmail.com</p>
-         </p>
+         <h1 itemprop="name">
+             <a href="index.html">dvoinoi</a>
+         </h1>
       </header>
+
+      <menu>
+          <ul>
+              <li><a href="about.html">about</a></li>
+              <li><a href="projects.html">projects</a></li>
+              <li><a href="releases.html">releases</a></li>
+              <li><a href="mailto:dvoinoi.official@gmail.com">contact</a></li>
+          </ul>
+      </menu>
+
       <main>
-         <div class="content">
-            <section class="home-page">
-               <div class="article">
-                  <p>
-                     Dvoinoi is an electronic duo, formed in 2014 in Bilbao, Basque Country.
-                  </p>
-                  <p>
-                     We focus on noise, techno and experiments with sound.
-                  </p>
-               </div>
-               <div class="article">
-                  <p><time>1523476800</time></p>
-                  <p>
-                     April 11 2018 <a href="https://www.songkick.com/concerts/33497624-circa-tapes-at-shake-bilbao">Circa Tapes & Dvoinoi at Shake! Bilbao.</a>.
-                  </p>
-               </div>
-               <div class="article">
-                  <iframe width="100%" height="724" src="https://www.youtube.com/embed/asGDhSIljXY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                  <p><time>1520640000</time></p>
-                  <p>
-                     March 17 2018, Live @<a href="https://es-la.facebook.com/Fua-chaval-fest-626523037496410/">fuachaval festival</a>.
-                  </p>
-               </div>
-               <div class="article">
-                  <p><time>1507593600</time></p>
-                  <p>
-                     Live set <a href="https://www.mixcloud.com/orbitak/dvoinoi-live/">@orbitak radio</a>. Thank you Orbitak!
-                  </p>
-               </div>
-               <div class="article">
-                  <p><time>1511343926</time></p>
-                  <p>
-                     New live studio recording: Untitled-1, download it at <a href="https://dvoinoi.bandcamp.com/track/untitled-1">bandcamp</a>
-                  </p>
-               </div>
-               <div class="article">
-                  <p><time>1497564000</time></p>
-                  <p>
-                     New album: Artefact, download it at <a href="https://dvoinoi.bandcamp.com/album/artefact">bandcamp</a>
-                  </p>
-               </div>
-               <div class="article">
-                  <p><time>1494569149</time></p>
-                  <p>
-                     Watch the Neuropa Live, excerpt video on <a href="https://www.youtube.com/watch?v=AagDIg3_mnY">youtube</a>
-                  </p>
-               </div>
-               <div class="article">
-                  <p><time>1493793871</time></p>
-                  <p>
-                     Check out our monophonic midi text-sequncer! <a href="https://github.com/dvoinoi/text-sequencer">github.com/dvoinoi</a>.
-                  </p>
-               </div>
-               <div class="article">
-                  <p><time>1485037194</time></p>
-                  <p>
-                     We're on <a href="http://idmradio.net">idmradio.net</a>
-                  </p>
-               </div>
-               <div class="article">
-                  <p><time>1472680800</time></p>
-                  <p>
-                     We have released a new tape, download it at <a href="https://archive.org/details/@dvoinoi">archive.org</a>
-                  </p>
-               </div>
-               <div class="article">
-                  <p><time>1419980400</time></p>
-                  <p>
-                     We released an album<br>
-                     <a href="https://soundcloud.com/dvoinoi/sets/binary-solstice">Binary Solstice</a><br>
-                     <a href="https://dvoinoi.bandcamp.com/album/binary-solstice">download it at bandcamp</a>
-                     <a href="https://www.youtube.com/watch?v=ZhyPzyk6DFM">listen on youtube</a>
-                  </p>
-               </div>
-               <div class="article">
-                  <p><time>1404684000</time></p>
-                  <p>
-                     listen to an excerpt from "neurope" : <a href="https://soundcloud.com/dvoinoi/neorope-n">n</a>
-                  </p>
-               </div>
-               <div class="article">
-                  <p><time>1404684000</time></p>
-                  <p itemprop="track" itemscope itemtype="http://schema.org/MusicRecording">
-                     We released a track with <a href="http://www.plazmarec.com/">Plazma Records</a> -
-                     <a href="https://www.beatport.com/release/tankard/1327653" itemprop="url">
-                        <span itemprop="name">tankard</span>
-                     </a>
-                  </p>
-               </div>
-            </section>
-         </div>
+
+
+
       </main>
+
+
    </div>
-   <script>
-       /*
-       $(document).ready(function(){
-           $('time').each(function(k,v){
-               ti = $(this).text();
-               human = new Date(ti*1000);
-               $(this).text(ti + ' - ' + human);
-           });
-       });
-       */
-   </script>
 </body>
 </html>
