--- a/releases.html
+++ b/releases.html
@@ -6,7 +6,7 @@
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
    <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <link rel="stylesheet" type="text/css" href="css/main.css">
-   <meta name="theme-color" content="#14bbda" />
+   <meta name="theme-color" content="#000" />
 </head>
 <body>
    <div id="wrapper" itemscope itemtype="http://schema.org/MusicGroup">
