--- a/releases.html
+++ b/releases.html
@@ -47,6 +47,15 @@
           </div>
 
           <div class="track">
+              <a href="https://contuberniorecords.bandcamp.com/album/shake-crlp099">
+                  <img src="https://f4.bcbits.com/img/a1343385942_16.jpg" alt="shke (live)">
+                  <div class="title">
+                      shke (live)
+                  </div>
+              </a>
+          </div>
+
+          <div class="track">
               <a href="https://dvoinoi.bandcamp.com/track/untitled-1">
                   <img src="https://f4.bcbits.com/img/a1991466373_16.jpg" alt="the untitled">
                   <div class="title">
