--- a/releases.html
+++ b/releases.html
@@ -48,9 +48,9 @@
 
           <div class="track">
               <a href="https://contuberniorecords.bandcamp.com/album/shake-crlp099">
-                  <img src="https://f4.bcbits.com/img/a1343385942_16.jpg" alt="shke (live)">
+                  <img src="https://f4.bcbits.com/img/a1343385942_16.jpg" alt="shake">
                   <div class="title">
-                      shke (live)
+                      shake
                   </div>
               </a>
           </div>
