live-show-specka

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 
       <main>
 
+        <p>next up: <a href="https://www.clubbingspain.com/noticias/2019/femur-meets-musica-dispersa.html">live set at specka 2019/11/16</a></p>
+        <br/>
+        <img style="max-width: 250px;" src="./img/flyer-femur-meets-musica-dispersa.jpg" />
 
 
       </main>
