new-album-eredua

--- a/releases.html
+++ b/releases.html
@@ -28,6 +28,15 @@
 
       <main>
 
+          <div class="album">
+              <a href="https://dvoinoi.bandcamp.com/album/eredua">
+                  <img src="https://f4.bcbits.com/img/a0401676158_10.jpg" alt="eredua">
+                  <div class="title">
+                      eredua
+                  </div>
+              </a>
+          </div>
+
           <div class="track">
               <a href="https://silentmethodrecords.bandcamp.com/track/dvoinoi-66">
                   <img src="https://f4.bcbits.com/img/a2330140696_16.jpg" alt="66">
