--- a/releases.html
+++ b/releases.html
@@ -28,6 +28,15 @@
 
       <main>
 
+         <div class="album">
+              <a href="https://dvoinoi.bandcamp.com/album/ltian">
+                  <img src="https://f4.bcbits.com/img/a4224492211_10.jpg" alt="ltian">
+                  <div class="title">
+                      ltian
+                  </div>
+              </a>
+          </div>
+         
           <div class="album">
               <a href="https://dvoinoi.bandcamp.com/album/eredua">
                   <img src="https://f4.bcbits.com/img/a0401676158_10.jpg" alt="eredua">
