--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
               <li><a href="about.html">about</a></li>
               <li><a href="projects.html">projects</a></li>
               <li><a href="releases.html">releases</a></li>
+              <li><a href="/img/logo.png">logo</a></li>
               <li><a href="mailto:dvoinoi.official@gmail.com">contact</a></li>
           </ul>
       </menu>
