--- a/about.html
+++ b/about.html
@@ -20,11 +20,12 @@
       <menu>
           <ul>
               <li><a href="about.html">about</a></li>
-              <li><a href="projects.html">projects</a></li>
               <li><a href="releases.html">releases</a></li>
+              <li><a href="/img/logo.png">logo</a></li>
               <li><a href="mailto:dvoinoi.official@gmail.com">contact</a></li>
           </ul>
       </menu>
+
 
       <main>
           <p>dvoinoi is a Moscow/Berlin based audiovisual project founded in 2014 by Alexander Bogdanov and Gorka Arce.</p>
