--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
           <p>dvoinoi, evokes the myth of "The Other", the doppelgänger "in the Slavic and Germanic mythological heritages.</p>
           <p>The "Other", the spirit of the reverse side, kidnaps and replaces our personalities by taking over and shaping our sound. This possession is perceived in our recordings and live performance.</p>
           <p>Our technique is improvisation in which you may find elements of asymetric techno, field recordings and industrial trial and error. We focus on electronic experimentation, in search of unrepeatable artifacts, beauty in chaos, hunting magical instants, and then releasing them, far from the concept of classic essay and composition, we are hunter-gatherers of sounds.</p>
+          <p>Video art by <a href="http://www.ismaeliglesias.com/">Ismael Iglesias</a></p>
       </main>
 
    </div>
