--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <title>dvoinoi</title>
-   <meta name="description" content="Dvoinoi is an electronic duo performing live Techno & Noise">
+   <meta name="description" content="Dvoinoi - live Techno, Noise, Video Art">
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
    <link rel="stylesheet" type="text/css" href="css/main.css">
    <meta name="theme-color" content="#000" />
@@ -12,7 +12,7 @@
 
       <menu>
           <ul>
-              <li><a href="index.html"><-</a></li>
+              <li><a href="index.html"><<<</a></li>
           </ul>
       </menu>
 
