--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <title>dvoinoi</title>
-   <meta name="description" content="Dvoinoi is an electronic duo performing live techno, creating Art installations and composing movie soundtracks">
+   <meta name="description" content="Dvoinoi - live Techno, Noise, Video Art">
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
    <meta name="theme-color" content="#000" />
    <link rel="stylesheet" type="text/css" href="css/main.css">
